[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fs_extra = "1"
git2 = "0.13.10"
hex = "0.4.3"
if-addrs = "0.9.0"
isahc = "1.7.2"
lettre = "0.11.0"
logging = { git = "https://github.com/Dj-Codeman/logger.git" }
mac_address = "1.1.5"
nix = "0.20"
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }
recs = { git = "https://github.com/Dj-Codeman/recs.git" }
systemstat = {git = "https://github.com/valpackett/systemstat.git" }
system_shutdown = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.22.0"
system = { git = "https://github.com/Dj-Codeman/system.git" }
systemctl = "0.3.1"
users = "0.9.0"

[lib]
name = "shared"
path = "src/Shared/main.rs"

[[bin]]
name = "ais_client"
path = "src/Client/main.rs"

[[bin]]
name = "mail_server"
path = "src/Mail/main.rs"

[[bin]]
name = "ssh_monitor"
path = "src/Ssh_Logger/main.rs"

[[bin]]
name = "generate_credentials"
path = "src/Tools/git_cf/main.rs"

[[bin]]
name = "generate_manifest"
path = "src/Tools/manifest/main.rs"

[[bin]]
name = "ais_welcome"
path = "src/Welcome/main.rs"