[package]
name = "Artisan_Interactivity_System"
version = "1.0.0"
edition = "2021"

[features]
dusa = [] # I havn't figure out how workflows can call dusa yet so these tests will be skipped, but we run them locally
software = [] # the software status loop will fail on workflows and non ais systems.
git = [] # This needs a repo pulled down on a host and a artisan.cf file generated to pass 

[dependencies]

# text output 
#bat = "0.24.0"

# Colored outputs 
colored = "2.0"

# Date and time manipulation
chrono = "0.4"

# Filesystem operations
fs_extra = "1"

# Git operations
git2 = "0.18.3"

# Get hostname 
gethostname = "0.4.3"

# Hexadecimal encoding and decoding
hex = "0.4.3"

# Hostname services
hostname = {version = "^0.4", features = ["set"]}

# Get network interface addresses
if-addrs = "0.12.0"

# HTTP client library
isahc = "1.7.2"

# SMTP client library
lettre = "0.11.0"

# Get Linux Standard Base release information
lsb_release = "0.1.0"

# Logging framework
logging = { git = "https://github.com/Dj-Codeman/logger.git" }

# Get MAC address
mac_address = "1.1.5"

# UNIX-specific functionality
nix = "0.29"

# Pretty-printing of data structures
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }

# Process information and system statistics
recs = { git = "https://github.com/Dj-Codeman/recs.git" }
systemstat = { git = "https://github.com/valpackett/systemstat.git" }
sysinfo = "0.30.8"
system = { git = "https://github.com/Dj-Codeman/system.git" }
system_shutdown = "4.0.1"

# Serialization/deserialization library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System control
systemctl = "0.3.1"

# custom errors
thiserror = "1.0.29"

# User management
users = "0.11.0"

[lib]
name = "shared"
path = "src/Shared/main.rs"

[[bin]]
name = "ais_client"
path = "src/Client/main.rs"

[[bin]]
name = "mail_server"
path = "src/Mail/main.rs"

[[bin]]
name = "ais_credentials"
path = "src/Tools/git_cf/main.rs"

[[bin]]
name = "ais_manifest"
path = "src/Tools/manifest/main.rs"

[[bin]]
name = "ais_clone"
path = "src/Tools/git_clone/main.rs"

[[bin]]
name = "ais_welcome"
path = "src/Welcome/main.rs"

[[bin]]
name = "ais_first_run"
path = "src/FirstRun/main.rs"
